[tool.poetry]
name = "stack-scanner"
version = "0.1.0"
description = ""
authors = ["Sönke Liebau <soenke.liebau@stackable.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
image-tools-stackabletech = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
